ODP-428: Fix drag styling on mobile.

--- a/source/sass/31-molecules/fields/_fields.scss
+++ b/source/sass/31-molecules/fields/_fields.scss
@@ -54,8 +54,10 @@ fieldset {
         margin: -.5rem 0 0 -.5rem;
 
         .handle {
+          height: 2rem;
           margin: .5rem;
           padding: .75rem;
+          background-position: 40% 1rem;
         }
       }
     }
